[aliases]
test=pytest

[metadata]
name = gbm_kitty
description = A pipline for producing a GBM catalog
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/gbm_kitty
author_email = jmichaelburgess@gmail.com
author = J. Michael Burgess
requires_python = >=2.7.0


project_urls =
    Bug Tracker = https://github.com/grburgess/gbm_kitty/issues
    Source Code = https://github.com/grburgess/gbm_kitty


[options]
packages = find:
install_requires =
    astropy
    numpy	
    matplotlib
    luigi
    astromodels
    threeml
    gbmgeometry
    gbm_drm_gen
    mongoengine
    
    
tests_require =
    pytest
    pytest-codecov



[versioneer]
VCS=git
style=pep440
versionfile_source=gbm_kitty/_version.py
versionfile_build=gbm_kitty/_version.py
tag_prefix=v
parentdir_prefix=gbm_kitty-
